WIP: CSS and A11Y cleanup - Fixes css issue on blue background shape in safari where overlay text was being clipped - Hides design-only images from screen readers - Changes name of theme base color variable

--- a/_assets/css/_uswds-settings.scss
+++ b/_assets/css/_uswds-settings.scss
@@ -14,7 +14,7 @@ $theme-h3-font-size: 12;
 $theme-body-font-size: 5;
 
 // Colors
-$theme-color-base-family: 'gray-warm-80';
+$theme-color-base: 'gray-warm-80';
 $theme-color-base-lightest: 'gray-5';
 
 $theme-color-primary: 'blue-warm-70v';
